--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
     "@react-native/new-app-screen": "0.81.0",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.25",
+    "@react-spring/native": "^10.0.1",
+    "moti": "^0.30.0",
     "react": "19.1.0",
     "react-native": "0.81.0",
+    "react-native-gesture-handler": "^2.28.0",
+    "react-native-reanimated": "^4.0.2",
     "react-native-safe-area-context": "^5.6.1",
-    "react-native-screens": "^4.15.2"
+    "react-native-screens": "^4.15.2",
+    "react-native-worklets": "^0.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -30,6 +35,7 @@
     "@react-native/metro-config": "0.81.0",
     "@react-native/typescript-config": "0.81.0",
     "@types/jest": "^29.5.13",
+    "@types/node": "^24.3.0",
     "@types/react": "^19.1.0",
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
