--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -116,4 +116,12 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+
+    implementation platform('com.google.firebase:firebase-bom:34.3.0')
+
+    implementation 'com.google.firebase:firebase-analytics'
 }
+
+
+apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
